added `v2/raw/:collection`
